# Dyno

./: CMakeLists.txt  README.md
scripts/: gamea.jl  gameb.jl  main.jl  precompile.jl
src/: dylib.cpp  dylib.cppm  dyno.cppm  interopt.cppm  jl_module.cppm  julia_engine.cpp  julia_engine.cppm  julia_types.cppm  main.cpp
tests/: CMakeLists.txt
tests/sandbox/: CMakeLists.txt
tests/sandbox/scripts/: gameb.jl  main.jl  precompile.jl
tests/sandbox/src/: main.cpp
